Last commits before review, will write up summary for helping with diff unreadability

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -11,6 +11,7 @@
     "import pyvisa \n",
     "import numpy as np\n",
     "from IPython.display import Image, display\n",
+    "from KeysightScope import KeysightScope\n",
     "\n",
     "# You will have to change this to whatever COM port the pico is assigned when\n",
     "# you plug it in.\n",
@@ -37,51 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class KeysightScope:\n",
-    "    \"\"\"\n",
-    "    Helper class using pyvisa for a USB connected Keysight Oscilloscope \n",
-    "    \"\"\"\n",
-    "    def __init__(self, \n",
-    "                 addr='USB?*::INSTR',\n",
-    "                 timeout=1, \n",
-    "                 termination='\\n'\n",
-    "                 ):\n",
-    "        rm = pyvisa.ResourceManager()\n",
-    "        devs = rm.list_resources(addr)\n",
-    "        assert len(devs), \"pyvisa didn't find any connected devices matching \" + addr\n",
-    "        self.dev = rm.open_resource(devs[0])\n",
-    "        self.dev.timeout = 15_000 * timeout\n",
-    "        self.dev.read_termination = termination\n",
-    "        self.idn = self.dev.query('*IDN?')\n",
-    "        self.read = self.dev.read\n",
-    "        self.write = self.dev.write\n",
-    "        self.query = self.dev.query\n",
-    "\n",
-    "    def _get_screenshot(self, verbose=False):\n",
-    "        if verbose == True:\n",
-    "            print('Acquiring screen image...')\n",
-    "        return(self.dev.query_binary_values(':DISPlay:DATA? PNG, COLor', datatype='s'))\n",
-    "\n",
-    "    def save_screenshot(self, filepath, verbose=False, inksaver=False):\n",
-    "        if verbose == True:\n",
-    "            print('Saving screen image...')\n",
-    "        result = self._get_screenshot()\n",
-    "\n",
-    "        # Keysight scope defaults to inksaving for image save\n",
-    "        if inksaver == True:\n",
-    "            self.dev.write(':HARDcopy:INKSaver 1')\n",
-    "        else: \n",
-    "            self.dev.write(':HARDcopy:INKSaver OFF')\n",
-    "\n",
-    "        with open(f'{filepath}', 'wb+') as ofile:\n",
-    "            ofile.write(bytes(result))\n",
-    "\n",
-    "    def set_time_delay(self, time):\n",
-    "        self.write(f':TIMebase:DELay {time}')\n",
-    "\n",
-    "    def set_time_scale(self, time):\n",
-    "        self.write(f':TIMebase:SCALe {time}')\n",
-    "\n",
     "my_instrument = KeysightScope()"
    ]
   },
@@ -144,66 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def assert_OK():\n",
-    "#     resp = conn.readline().decode().strip()\n",
-    "#     assert resp == 'ok', 'Expected \"ok\", received \"%s\"' % resp\n",
-    "\n",
-    "# def allocate_sendb(instructions, channel):\n",
-    "#     ## tell setb how many instructions to expect \n",
-    "#     conn.write(b'setb %d %d\\n' % (channel, len(instructions)))\n",
-    "#     response = conn.readline().decode()\n",
-    "#     if not response.startswith('ready'):\n",
-    "#         response += ''.join([r.decode() for r in conn.readlines()])\n",
-    "#         raise Exception(f'setb command failed, response: {repr(response)}')\n",
-    "#     print(f'Got response: {response}')\n",
-    "\n",
-    "# def stop_sendb(instructions):\n",
-    "#     conn.write(b'set 4 %d\\n' % len(instructions))\n",
-    "#     assert_OK(), 'table not stopped correctly'\n",
-    "#     print('table finished')\n",
-    "\n",
-    "# # def write_sendb(instructions, channel):\n",
-    "\n",
-    "# def sendb(instructions: np.ndarray, channel: int = 0, multi_channel = False) -> str:\n",
-    "#     \"\"\"Sends a table of instructions to the sweeper to be read in binary mode `setb`.\n",
-    "\n",
-    "#     Parameters\n",
-    "#     ----------\n",
-    "#     instructions : np.ndarray \n",
-    "#         the table of instructions to be processed.\n",
-    "\n",
-    "#     channel : int  \n",
-    "#         instruction channel, defaults to 0.\n",
-    "\n",
-    "#     multi_channel : bool \n",
-    "#         bool option to send commands to more than one channel and handle channel mirroring, defaults to False.\n",
-    "\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     try:\n",
-    "\n",
-    "#         allocate_sendb(instructions, channel)\n",
-    "\n",
-    "#         conn.write(instructions.tobytes())\n",
-    "#         assert_OK(), 'table not written correctly'\n",
-    "#         print('table written')\n",
-    "        \n",
-    "#         # conn.write(b'set 4 %d\\n' % len(instructions))\n",
-    "#         # assert_OK(), 'table not stopped correctly'\n",
-    "#         # print('table finished')\n",
-    "\n",
-    "#         # stop_sendb(instructions)\n",
-    "\n",
-    "#     except Exception as e:\n",
-    "#         raise e\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "## slightly different logic than the ad9959.c funcs due to python vs c\n",
     "def get_ftw(freq_out: float, freq_sys: float = 500 * MHZ):\n",
     "\n",
@@ -240,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +199,7 @@
     "single_step_test.allocate(start_address=0, instructions=step_instructions)\n",
     "single_step_test.table_to_memory(instructions=step_instructions)\n",
     "single_step_test.end_table(instructions=step_instructions)\n",
-    "single_step_test.start_routine()\n"
+    "single_step_test.start_routine()"
    ]
   },
   {
@@ -322,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -381,162 +277,6 @@
     "freq_sweep_test.end_table(instructions=freq_sweep_table)\n",
     "freq_sweep_test.start_routine()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Phase Sweeps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Phase Sweeps (mode 3) with timing: `<start phase:int 16> <stop phase:int 16> <delta:int 16> <rate:int 8> <time:int 32>`. Total of 11 bytes per channel per instruction."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dt = np.dtype([('start phase', np.uint16), \n",
-    "               ('stop phase', np.uint16), \n",
-    "               ('delta', np.uint16), \n",
-    "               ('rate', np.uint8), \n",
-    "               ('time', np.uint32)])\n",
-    "\n",
-    "p0 = get_pow(phase = 0)\n",
-    "p1 = get_pow(phase = 90)\n",
-    "p2 = get_pow(phase = 180)\n",
-    "p3 = get_pow(phase = 270)\n",
-    "p4 = get_pow(phase = 360)\n",
-    "\n",
-    "d = 1\n",
-    "r = 1\n",
-    "t = 2\n",
-    "\n",
-    "\n",
-    "channel0_instructions = np.array([\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t),\n",
-    "                                # (0, 0, d, r, t)\n",
-    "                                (p0, p2, d, r, t),\n",
-    "                                (p2, p1, d, r, t),\n",
-    "                                (p1, p0, d, r, t),\n",
-    "                                (p0, p1, d, r, t),\n",
-    "                                (p1, p2, d, r, t),\n",
-    "                                (p2, p0, d, r, t)\n",
-    "                                 ]\n",
-    "                                 , dtype = dt)\n",
-    "\n",
-    "channel1_instructions = np.array([\n",
-    "                                # (0, 180, d, r, t),\n",
-    "                                # (180, 90, d, r, t),\n",
-    "                                # (90, 0, d, r, t),\n",
-    "                                # (0, 90, d, r, t),\n",
-    "                                # (90, 180, d, r, t),\n",
-    "                                # (180, p0, d, r, t)\n",
-    "                                (p0, p2, d, r, t),\n",
-    "                                (p2, p1, d, r, t),\n",
-    "                                (p1, p0, d, r, t),\n",
-    "                                (p0, p1, d, r, t),\n",
-    "                                (p1, p2, d, r, t),\n",
-    "                                (p2, p0, d, r, t)\n",
-    "                                 ]\n",
-    "                                 , dtype = dt)\n",
-    "\n",
-    "\n",
-    "phase_sweep_instructions = np.concatenate((channel0_instructions, channel1_instructions))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sending commands to 2 channels\n",
-      "Got response: ready for 132 bytes\n",
-      "\n",
-      "table written to memory\n",
-      "table end command sent\n",
-      "table executed\n"
-     ]
-    }
-   ],
-   "source": [
-    "phase_sweep_test = Binary_Routines()\n",
-    "phase_sweep_test.debug_on()\n",
-    "phase_sweep_test.set_mode(sweep_mode=3, timing_mode=1, num_channels=2)\n",
-    "\n",
-    "phase_sweep_test.allocate(start_address=0, instructions=channel0_instructions)\n",
-    "phase_sweep_test.table_to_memory(instructions=phase_sweep_instructions)\n",
-    "\n",
-    "# phase_sweep_test.allocate(channel=1, instructions=channel1_instructions)\n",
-    "# phase_sweep_test.table_to_memory(instructions=channel1_instructions)\n",
-    "\n",
-    "phase_sweep_test.end_table(instructions=channel0_instructions)\n",
-    "phase_sweep_test.start_routine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #### not always necessary, just if you want to move back to tests.ipynb\n",
-    "# conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sending commands to 0 channels\n",
-      "Got response: ready for 66 bytes\n",
-      "\n",
-      "table written to memory\n",
-      "table end command sent\n",
-      "table executed\n"
-     ]
-    }
-   ],
-   "source": [
-    "phase_sweep_test = Binary_Routines()\n",
-    "phase_sweep_test.debug_on()\n",
-    "phase_sweep_test.set_mode(sweep_mode=3, timing_mode=1, num_channels=0)\n",
-    "\n",
-    "phase_sweep_test.allocate(start_address=0, instructions=channel0_instructions)\n",
-    "phase_sweep_test.table_to_memory(instructions=channel0_instructions)\n",
-    "\n",
-    "# phase_sweep_test.allocate(channel=1, instructions=channel1_instructions)\n",
-    "# phase_sweep_test.table_to_memory(instructions=channel1_instructions)\n",
-    "\n",
-    "phase_sweep_test.end_table(instructions=channel0_instructions)\n",
-    "phase_sweep_test.start_routine()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
