changed classes to use CapWords convention and objects to use lowercase_with_underscores for PEP8 (and consistency)

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Binary_Routines():\n",
+    "class BinaryRoutines():\n",
     "    def __init__(self):\n",
     "        self.mirror_channels = False\n",
     "\n",
@@ -91,7 +91,7 @@
     "        self.assert_OK(), 'table did not start'\n",
     "        print('table executed')\n",
     "\n",
-    "Binary_Routine_Test = Binary_Routines()"
+    "binary_routine_test = BinaryRoutines()"
    ]
   },
   {
@@ -169,11 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_step_test = Binary_Routines()"
+    "single_step_test = BinaryRoutines()"
    ]
   },
   {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "freq_sweep_test = Binary_Routines()\n",
+    "freq_sweep_test = BinaryRoutines()\n",
     "freq_sweep_test.set_mode(sweep_mode=2, timing_mode=1, num_channels=1)\n",
     "freq_sweep_test.allocate(start_address=0, instructions=freq_sweep_table)\n",
     "freq_sweep_test.table_to_memory(instructions=freq_sweep_table)\n",
