--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
     "        print(memory_layout)\n",
     "        # self.assert_OK, 'something went wrong getting memory layout'\n",
     "        \n",
-    "binary_routine_test = Binary_Routines()"
+    "binary_routine_test = BinaryRoutines()"
    ]
   },
   {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
     }
    ],
    "source": [
-    "phase_sweep_test = Binary_Routines()\n",
+    "phase_sweep_test = BinaryRoutines()\n",
     "phase_sweep_test.debug_off()\n",
     "phase_sweep_test.set_mode(sweep_mode=3, timing_mode=1, num_channels=2)\n",
     "\n",
