fixed asymmetry in amp sweeps (needed a slightly longer time) and cleanup on comments in dds-sweeper.c

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -637,9 +637,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "Set ins #0 for channel 0 from 1.000000% to 0.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #1 for channel 0 from 0.000000% to 0.500489% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #2 for channel 0 from 0.500489% to 1.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #3 for channel 0 from 1.000000% to 0.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #4 for channel 0 from 0.000000% to 1.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #5 for channel 0 from 1.000000% to 0.500489% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #6 for channel 0 from 0.500489% to 0.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "Set ins #7 for channel 0 from 0.000000% to 1.000000% with sweep rate 122070.312500% arb/s\n",
+      "\ttime: 1.60e-05 s\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "\n",
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
     "my_instrument.annotate_screen(\"Testing Mode 1: Amplitude Sweep\")\n",
     "# my_instrument.set_time_delay(50e-6)\n",
@@ -648,7 +691,7 @@
     "# send('reset')\n",
     "\n",
     "filename = 'mode1-picostart-ampsweep-test.png'\n",
-    "t = 200 / (125e6)\n",
+    "t = 2000 / (125e6)\n",
     "sweep_rate = .1225e6  # arb / s\n",
     "\n",
     "print(send(f\"\"\"mode 1 1\n",
