--- a/testing/instruction-tests.ipynb
+++ b/testing/instruction-tests.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 243 Kb Results\n",
+    "## 243 KB Results\n",
     "| Table Mode                  | 1 Channel | 2 Channel | 3 Channel | 4 Channel |\n",
     "|-----------------------------|-----------|-----------|-----------|-----------|\n",
     "| Single Stepping (Ext Timer) | 16587     | 8579      | 5786      | 4365      |\n",
