rp2040 244 kB and rp3050 500 kB instructions counted

--- a/testing/instruction-tests.ipynb
+++ b/testing/instruction-tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,13 +114,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 243 KB Results\n",
+    "## 244 kB Results - Pico 1 (RP2040)\n",
     "| Table Mode                  | 1 Channel | 2 Channel | 3 Channel | 4 Channel |\n",
     "|-----------------------------|-----------|-----------|-----------|-----------|\n",
-    "| Single Stepping (Ext Timer) | 16587     | 8579      | 5786      | 4365      |\n",
-    "| Sweep Mode (Ext Timer)      | 8579      | 4364      | 2927      | 2201      |\n",
+    "| Single Stepping (Ext Timer) | 16656     | 8615      | 5810      | 4383      |\n",
+    "| Sweep Mode (Ext Timer)      | 8614      | 4382      | 2938      | 2210      |\n",
+    "| Single Stepping (Int Timer) | 5000      | 5000      | 5000      | 4032      |\n",
+    "| Sweep Mode (Int Timer)      | 5000      | 4032      | 2703      | 2033      |\n",
+    "\n",
+    "## 500 kB Results - Pico 2\n",
+    "| Table Mode                  | 1 Channel | 2 Channel | 3 Channel | 4 Channel |\n",
+    "|-----------------------------|-----------|-----------|-----------|-----------|\n",
+    "| Single Stepping (Ext Timer) | 34132     | 17654     | 11905     | 8981      |\n",
+    "| Sweep Mode (Ext Timer)      | 17654     | 8981      | 6022      | 4529      |\n",
     "| Single Stepping (Int Timer) | 5000      | 5000      | 5000      | 4014      |\n",
-    "| Sweep Mode (Int Timer)      | 5000      | 4014      | 2691      | 2024      |"
+    "| Sweep Mode (Int Timer)      | 5000      | 4014      | 2691      | 2024      |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------\n",
+      "16656.066666666666 -> 16656\n",
+      "8614.724137931034 -> 8614\n",
+      "5809.604651162791 -> 5809\n",
+      "4382.438596491228 -> 4382\n",
+      "--------\n",
+      "8614.724137931034 -> 8614\n",
+      "4382.438596491228 -> 4382\n",
+      "2938.4823529411765 -> 2938\n",
+      "2210.1150442477874 -> 2210\n"
+     ]
+    }
+   ],
+   "source": [
+    "MAX_SIZE = 244 * 1024\n",
+    "import math\n",
+    "\n",
+    "ins_sizes = [14, 28]\n",
+    "for ins_size in ins_sizes:\n",
+    "    print('--------')\n",
+    "    for num_channels in range(1, 5):\n",
+    "        num_ins = MAX_SIZE / (ins_size * num_channels + 1) - 1\n",
+    "        print(num_ins, '->', math.floor(num_ins))"
    ]
   },
   {
@@ -132,20 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending commands to 3 channels\n",
-      "Got response: ready for 180000 bytes\n",
+      "sending commands to 4 channels\n",
+      "Got response: ready for 193536 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
       "table executed\n",
-      "5000\n"
+      "4032\n"
      ]
     }
    ],
@@ -154,26 +197,26 @@
     "## Change these per every test, rest should be handled ##\n",
     "#########################################################\n",
     "\n",
-    "num_chans = 3\n",
+    "num_chans = 4\n",
     "timing_mode = 1 # 0 for external, 1 for internal\n",
     "sweep_mode = 0\n",
     "\n",
-    "## 240 Kb results\n",
+    "## 240 kB results\n",
     "# n_1_step_ext = 16382\n",
     "# n_2_step_ext = 8473\n",
     "# n_3_step_ext = 5714\n",
     "# n_4_step_ext = 4311\n",
     "\n",
-    "## 243 Kb Results\n",
-    "n_1_step_ext = 16587\n",
-    "n_2_step_ext = 8579\n",
-    "n_3_step_ext = 5786\n",
-    "n_4_step_ext = 4365\n",
+    "## 244 kB Results\n",
+    "n_1_step_ext = 16656\n",
+    "n_2_step_ext = 8615\n",
+    "n_3_step_ext = 5810\n",
+    "n_4_step_ext = 4383\n",
     "\n",
     "n_1_step_int = 5000\n",
     "n_2_step_int = 5000\n",
     "n_3_step_int = 5000\n",
-    "n_4_step_int = 4014\n",
+    "n_4_step_int = 4032\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -245,7 +288,7 @@
     "\n",
     "    time.sleep(1)\n",
     "\n",
-    "    sendp(f'set 0 0 4000 20000\\r\\n')\n",
+    "    sendp(f'set 0 0 4000 35000\\r\\n')\n",
     "    print(sendp('start\\r\\n', echo=True))\n",
     "\n",
     "    time.sleep(2)\n",
@@ -272,22 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending commands to 1 channels\n",
-      "Got response: ready for 60053 bytes\n",
+      "sending commands to 4 channels\n",
+      "Got response: ready for 89452 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
       "table executed\n",
-      "ok\n",
-      "\n",
-      "8579\n"
+      "2033\n"
      ]
     }
    ],
@@ -296,11 +337,11 @@
     "## Change these per every test, rest should be handled ##\n",
     "#########################################################\n",
     "\n",
-    "num_chans = 1\n",
-    "timing_mode = 0 # 0 for external, 1 for internal\n",
+    "num_chans = 4\n",
+    "timing_mode = 1 # 0 for external, 1 for internal\n",
     "sweep_mode = 1\n",
     "\n",
-    "## 240 Kb results\n",
+    "## 240 kB results\n",
     "# n_1_sweep_ext = 8472\n",
     "# n_2_sweep_ext = 4311\n",
     "# n_3_sweep_ext = 2890\n",
@@ -311,16 +352,16 @@
     "# n_3_sweep_int = 2653\n",
     "# n_4_sweep_int = 1995\n",
     "\n",
-    "## 243 Kb Results\n",
-    "n_1_sweep_ext = 8579\n",
-    "n_2_sweep_ext = 4364\n",
-    "n_3_sweep_ext = 2927\n",
-    "n_4_sweep_ext = 2201\n",
+    "## 244 kB Results\n",
+    "n_1_sweep_ext = 8614\n",
+    "n_2_sweep_ext = 4382\n",
+    "n_3_sweep_ext = 2938\n",
+    "n_4_sweep_ext = 2210\n",
     "\n",
     "n_1_sweep_int = 5000\n",
-    "n_2_sweep_int = 4014\n",
-    "n_3_sweep_int = 2691\n",
-    "n_4_sweep_int = 2024\n",
+    "n_2_sweep_int = 4032\n",
+    "n_3_sweep_int = 2703\n",
+    "n_4_sweep_int = 2033\n",
     "\n",
     "#########################################################\n",
     "\n",
