updating rp2350 internal timing sizes -- we lose a lot less instructions than before

--- a/testing/instruction-tests.ipynb
+++ b/testing/instruction-tests.ipynb
@@ -25,7 +25,7 @@
     "# you plug it in.\n",
     "# On Windows you can open device manager and look at the 'Ports (COM & LPT)' dropdown\n",
     "# the pico will show up as 'USB Serial Device'\n",
-    "SWEEP_PORT = 'COM3'\n",
+    "SWEEP_PORT = 'COM11'\n",
     "PRAWN_PORT = 'COM7'\n",
     "\n",
     "MHZ = 1000000\n",
@@ -127,14 +127,14 @@
     "|-----------------------------|-----------|-----------|-----------|-----------|\n",
     "| Single Stepping (Ext Timer) | 34132     | 17654     | 11905     | 8981      |\n",
     "| Sweep Mode (Ext Timer)      | 17654     | 8981      | 6022      | 4529      |\n",
-    "| Single Stepping (Int Timer) | 5000      | 5000      | 5000      | 4014      |\n",
-    "| Sweep Mode (Int Timer)      | 5000      | 4014      | 2691      | 2024      |\n",
+    "| Single Stepping (Int Timer) | 5000      | 5000      | 5000      | 5000      |\n",
+    "| Sweep Mode (Int Timer)      | 5000      | 5000      | 5000      | 4353      |\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -142,27 +142,34 @@
      "output_type": "stream",
      "text": [
       "--------\n",
-      "16656.066666666666 -> 16656\n",
-      "8614.724137931034 -> 8614\n",
-      "5809.604651162791 -> 5809\n",
-      "4382.438596491228 -> 4382\n",
+      "34132.333333333336 -> 34132\n",
+      "17654.172413793105 -> 17654\n",
+      "11905.976744186046 -> 11905\n",
+      "8981.456140350878 -> 8981\n",
       "--------\n",
-      "8614.724137931034 -> 8614\n",
-      "4382.438596491228 -> 4382\n",
-      "2938.4823529411765 -> 2938\n",
-      "2210.1150442477874 -> 2210\n"
+      "17654.172413793105 -> 17654\n",
+      "8981.456140350878 -> 8981\n",
+      "6022.529411764706 -> 6022\n",
+      "4529.973451327433 -> 4529\n"
      ]
     }
    ],
    "source": [
-    "MAX_SIZE = 244 * 1024\n",
     "import math\n",
+    "MAX_SIZE = 244 * 1024\n",
+    "MAX_SIZE = 500 * 1024\n",
+    "timing = False\n",
     "\n",
-    "ins_sizes = [14, 28]\n",
+    "if timing == True:\n",
+    "    TIMERS = 5000\n",
+    "else:\n",
+    "    TIMERS = 0\n",
+    "\n",
+    "ins_sizes = [14, 28] # choosing Single Stepping and Amplitude sweep ins sizes\n",
     "for ins_size in ins_sizes:\n",
     "    print('--------')\n",
     "    for num_channels in range(1, 5):\n",
-    "        num_ins = MAX_SIZE / (ins_size * num_channels + 1) - 1\n",
+    "        num_ins = (MAX_SIZE - TIMERS * 4) / (ins_size * num_channels + 1) - 1\n",
     "        print(num_ins, '->', math.floor(num_ins))"
    ]
   },
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -183,12 +190,12 @@
      "output_type": "stream",
      "text": [
       "sending commands to 4 channels\n",
-      "Got response: ready for 193536 bytes\n",
+      "Got response: ready for 240000 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
       "table executed\n",
-      "4032\n"
+      "5000\n"
      ]
     }
    ],
@@ -213,10 +220,15 @@
     "n_3_step_ext = 5810\n",
     "n_4_step_ext = 4383\n",
     "\n",
+    "# n_1_step_int = 5000\n",
+    "# n_2_step_int = 5000\n",
+    "# n_3_step_int = 5000\n",
+    "# n_4_step_int = 4032\n",
+    "\n",
     "n_1_step_int = 5000\n",
     "n_2_step_int = 5000\n",
     "n_3_step_int = 5000\n",
-    "n_4_step_int = 4032\n",
+    "n_4_step_int = 5000\n",
     "\n",
     "#########################################################\n",
     "\n",
@@ -322,13 +334,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending commands to 4 channels\n",
-      "Got response: ready for 89452 bytes\n",
+      "sending commands to 3 channels\n",
+      "Got response: ready for 165000 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
       "table executed\n",
-      "2033\n"
+      "5000\n"
      ]
     }
    ],
@@ -337,7 +349,7 @@
     "## Change these per every test, rest should be handled ##\n",
     "#########################################################\n",
     "\n",
-    "num_chans = 4\n",
+    "num_chans = 3\n",
     "timing_mode = 1 # 0 for external, 1 for internal\n",
     "sweep_mode = 1\n",
     "\n",
@@ -358,10 +370,16 @@
     "n_3_sweep_ext = 2938\n",
     "n_4_sweep_ext = 2210\n",
     "\n",
+    "# n_1_sweep_int = 5000\n",
+    "# n_2_sweep_int = 4032\n",
+    "# n_3_sweep_int = 2703\n",
+    "# n_4_sweep_int = 2033\n",
+    "\n",
+    "## 500 kB results\n",
     "n_1_sweep_int = 5000\n",
-    "n_2_sweep_int = 4032\n",
-    "n_3_sweep_int = 2703\n",
-    "n_4_sweep_int = 2033\n",
+    "n_2_sweep_int = 5000\n",
+    "n_3_sweep_int = 5000\n",
+    "n_4_sweep_int = 4353\n",
     "\n",
     "#########################################################\n",
     "\n",
